--- a/public/css/register-styles.css
+++ b/public/css/register-styles.css
@@ -9,20 +9,22 @@
 
 body{
     font-family: roboto;
-
+    background: url(/public/images/fondoRegister.jpg)
 }
 
 .nav li a {
-    color: black;
+    color: white;
     text-decoration:none;
     padding:5px;
     display:block;
 }
 
-.img {
-    width: 100%;
-    height: 90%;
-    transition: all 500ms ease-out;
+.blanco {
+    display: block;
+}
+
+.negro{
+    display: none;
 }
 
 main {
@@ -33,9 +35,10 @@ main {
 }
 
 .login-box {
-    background: #FFCB00;
+    background: transparent;
+    backdrop-filter: blur(5px);
     margin-top: 200px;
-    border: 1px solid black;
+    border: 3px solid #FFCB00;
     display: flex;
     align-items: center;
     width: 320px;
@@ -100,9 +103,6 @@ h2 {
     .fotos {
         flex-direction: column; 
      }
-     .blanco {
-        display: none;
-    }
 }
 
 
@@ -111,11 +111,8 @@ h2 {
     .fotos {
         flex-direction: column; 
      }
-     .blanco {
-        display: none;
-    }
-
 }
+
 @media (min-width: 768px){
     /* Laptop */
   
@@ -125,7 +122,4 @@ h2 {
     .fotos {
         flex-direction: row; 
      }
-     .blanco {
-        display: none;
-    }
 }
