--- a/src/views/product/create.ejs
+++ b/src/views/product/create.ejs
@@ -12,14 +12,8 @@
         <div class="contenedor1">   
         <h2 class="titulo">Creacion de Productos</h2>
             <div class="create">
-            <div class="Imagen">
-                <div class="#">
-                    <label for="file" class="form-label">Imagen:</label>
-                    <input type="file" id="image" name="image" class="form-input">
-                    <img  class="product-img" src="/public/images/producto1.png">
-                </div>
             </div>    
-                <form  action="product/create" method="post" enctype="multipart/form-data">
+                <form  action="/product/create" method="POST" enctype="multipart/form-data">
                 <div class="row product-detail">
                     <div >
                         <label for="name" class="form-label">Nombre del producto:</label>
@@ -33,18 +27,23 @@
                         <label for="discount" class="form-label">Descuento:</label>
                         <input type="text" id="discount" name="discount" placeholder="Ej: 15" class="form-input">
                     </div>
-                    
                     <div >
                         <label for="category" class="form-label">Categoría:</label>
                         <select name="category" id="category" class="form-input">
                             <option value="">Elegí</option>
-                            <option value="in-sale">En oferta</option>
-                            <option value="visited">Últimos agregados</option>
+                            <option value="category">Color</option>
+                            <option value="category">Styling</option>
+                            <option value="category">Care</option>
+                            <option value="category">Barber</option>
                         </select>
                     </div>
                     <div >
                         <label for="description" class="form-label">Descripción:</label>
                         <textarea name="description" id="description" class="form-input"></textarea>
+                    </div>
+                    <div>
+                        <label for="file" class="form-label">Imagen:</label>
+                        <input type="file" id="image" name="image" class="form-input">
                     </div>
                     <div>
                         <button type="submit" class="buy-now-button">Guardar producto</button>
