--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -21,12 +21,12 @@
 
                         <form action="/user/login" method="POST">
 
-                            <div class="usuario">
-                                <input type="text" placeholder="Nombre de usuario" name="usuario"> </input>
+                            <div class="usuario" >
+                                <input name = "username" type="text" placeholder="Nombre de usuario" > </input>
                             </div>
 
                             <div class="password">
-                                <input type="password" placeholder="Contraseña"> </input>
+                                <input name = "password" type="password" placeholder="Contraseña"> </input>
                             </div>
 
 
