--- a/src/views/user/cart.ejs
+++ b/src/views/user/cart.ejs
@@ -12,7 +12,7 @@
         <h2 class="titulo">Tu carrito de Compras</h2>
             <main class="main-cart">
                 <section>
-                    <div class="product-img"><img src="/public/images/producto1.png"></div>
+                    <div class="product-img"><img src="/public/images/products/serum.jpg"></div>
                         <div class="boxEnvio">
                             <div class="cantidad"><input class="acumulador" type="button" value="-" class="minus"><input class="acumulador" type="number" step="1" min="1" max=""
                                 name="quantity" value="1" title="Qty" class="input-text qty text" size="4" pattern=""
