--- a/public/css/home-styles.css
+++ b/public/css/home-styles.css
@@ -18,7 +18,7 @@
 
 .ofertas {
     position: absolute;
-    top: 450px;
+    top: 560px;
 }
 
 @media (max-width: 460px){
@@ -99,7 +99,10 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top:100px
+    margin-top:100px;
+    position: absolute;
+    top: 150px;
+
 }
 .blanco {
     display: none;
