Rutas a Cart andando en todas las vistas

--- a/src/views/product/edit.ejs
+++ b/src/views/product/edit.ejs
@@ -9,7 +9,7 @@
 
         <%- include('../partials/header') %>
         <div class="contenedor1">   
-        <h2 class="titulo">Creacion de Productos</h2>
+        <h2 class="titulo">Edita tu producto</h2>
             <div class="create">
             <div class="Imagen">
                 <div class="#">
