--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -16,6 +16,8 @@ body{
     background-position: top ;
     background-position-x:  30px ;
     background-position-y:  55px;
+    position: fixed;
+    
 }
 
 main {
