--- a/src/views/product/detail.ejs
+++ b/src/views/product/detail.ejs
@@ -17,7 +17,7 @@
                     <img src="/images/products/<%= product.image %> ">
                     <p class="descripcion">$ <%= product.price %> </p>
                     <p class="descripcion">Impuestos incluidos</p>
-                    <a href="./user/cart"><button class="cart_button">Agregar al carrito</button></a>
+                    <a href="/user/cart"><button class="cart_button">Agregar al carrito</button></a>
                     </div>  
             <div class="description"><%= product.description %> </div>
         
