--- a/src/views/product/product.ejs
+++ b/src/views/product/product.ejs
@@ -14,7 +14,7 @@
                                 <p class="banner">ENVIOS GRATIS A PARTIR DE $1000!</p>
                                 <section class="main_product">
                                         <div class="principales">
-                                               <% filteredProducts.forEach (element => { %>
+                                        <% filteredProducts.forEach (element => { %>
                                                 <div class="productos">
                                                         <h6 class="titulo"><%= element.name %> </h6>
                                                                 <a href="/product/detail/<%= element.id %>">
@@ -22,7 +22,7 @@
                                                                 </a>
                                                                 <p class="descripcion">$<%= element.price %></p>
                                                                 <p class="descripcion">Impuestos incluidos</p>
-                                                                <a href="user/cart">
+                                                                <a href="../user/cart">
                                                                 <button class="cart_button">Agregar al carrito</button>
                                                                 </a>
                                                         
@@ -39,11 +39,11 @@
                                                 <a href="product/detail"><img src="/images/products/<%= element.image %>"></a>
                                                         <p class="descripcion">$<%= element.price %></p>
                                                         <p class="descripcion">Impuestos incluidos</p>
-                                                        <a href="user/cart">    <button class="cart_button">Agregar al carrito</button></a>
+                                                        <a href="/user/cart">    <button class="cart_button">Agregar al carrito</button></a>
                                                 
                                         </div>
                                         <% }) %>
-                                       
+                                
 
                                 </div>
 
