--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -31,7 +31,7 @@
 
 
 
-                            <button class="enviar1" type="">Ingresar</button>
+                            <button class="enviar1" type="submit">Ingresar</button>
                             <div class="pregunta">
 
                                 <a class="contra" href="/">Olvide mi Contraseña</a>
