--- a/public/css/header.css
+++ b/public/css/header.css
@@ -70,7 +70,7 @@ a {
     .logo {
         height: 13vh;
         width: 18vh;
-        margin-top: 16px;
+        /* margin-top: 16px; */
     }
 }
 
