--- a/src/views/product/create.ejs
+++ b/src/views/product/create.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/head') %>
     <link href="/css/cart-styles.css" rel="stylesheet">
     <link href="/css/header.css" rel="stylesheet">
-
+    <script src="/public/js/product.js"></script>
     <title>Hairsy</title>
     </head>
 
