--- a/src/views/product/edit.ejs
+++ b/src/views/product/edit.ejs
@@ -18,7 +18,7 @@
                     <img  class="product-img" src="/public/images/producto1.png">
                 </div>
             </div>    
-                <form  action="/product/create" method="post" enctype="multipart/form-data">
+                <form  action="/product/create" method="POST" enctype="multipart/form-data">
                 <div class="row product-detail">
                     <div >
                         <label for="name" class="form-label">Nombre del producto:</label>
