--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -3,7 +3,7 @@
     <link href="/css/login-styles.css" rel="stylesheet">
     <link href="/css/header.css" rel="stylesheet">
     <link href="/css/footer.css" rel="stylesheet">
-
+    <script src="/public/js/login.js"></script>
     </head>
 
     <body>
