--- a/src/views/product/detail.ejs
+++ b/src/views/product/detail.ejs
@@ -14,12 +14,12 @@
         <p class="banner">ENVIOS GRATIS A PARTIR DE $1000!</p>
         <section class="main_product1">
                 <div class="contenedor">  <h5 class="titulo"></h5>
-                    <img src="/images/products/<%= product.image %> ">
+                    <img class="imagenes" src="/images/products/<%= product.image %> ">
                     <p class="descripcion">$ <%= product.price %> </p>
                     <p class="descripcion">Impuestos incluidos</p>
                     <a href="/user/cart"><button class="cart_button">Agregar al carrito</button></a>
                     </div>  
-            <div class="description"><%= product.description %> </div>
+            <p class="description"><%= product.description %> </p>
         
     </main>
     
