--- a/src/views/product/edit.ejs
+++ b/src/views/product/edit.ejs
@@ -15,43 +15,49 @@
                 <div class="#">
                     <label for="file" class="form-label">Imagen:</label>
                     <input type="file" id="image" name="image" class="form-input">
-                    <img  class="product-img" src="/public/images/producto1.png">
+                    <img  class="product-img" src="/public/images/products/Mascara Reparacion.png">
                 </div>
             </div>    
                 <form  action="/product/create" method="POST" enctype="multipart/form-data">
-                <div class="row product-detail">
+                   
+                    <div class="row product-detail">
                     <div >
                         <label for="name" class="form-label">Nombre del producto:</label>
-                        <input type="text" id="name" name="name" placeholder="Ej: Tintura" class="form-input">
+                        <input type="text" id="name" name="name" placeholder="Mascara Reparadora" class="form-input">
                     </div>
                     <div >
                         <label for="price" class="form-label">Precio del producto:</label>
-                        <input type="text" id="price" name="price" placeholder="Ej: 5678" class="form-input">
+                        <input type="text" id="price" name="price" placeholder="Precio"  class="form-input">
                     </div>
-                    <div >
-                        <label for="discount" class="form-label">Descuento:</label>
-                        <input type="text" id="discount" name="discount" placeholder="Ej: 15" class="form-input">
-                    </div>
-                    
                     <div >
                         <label for="category" class="form-label">Categoría:</label>
                         <select name="category" id="category" class="form-input">
-                            <option value="">Elegí</option>
-                            <option value="in-sale">En oferta</option>
-                            <option value="visited">Últimos agregados</option>
+                            <option value=""></option>
+                            <option value="in-sale">COLOR</option>
+                            <option value="visited">CARE</option>
+                            <option value="visited">STYLING</option>
+                            <option value="visited">BARBER</option>
                         </select>
                     </div>
                     <div >
-                        <label for="description" class="form-label">Descipción:</label>
+                        <label for="description" class="form-label">Descripción:</label>
                         <textarea name="description" id="description" class="form-input"></textarea>
                     </div>
                     <div>
                         <button type="submit" class="buy-now-button">Guardar producto</button>
                     </div>
                 </div>
+                
             </form>
         </div>  
     </div>
             <%- include('../partials/footer') %>
 
     </body>
+
+
+
+
+
+    
+      
