--- a/src/views/product/detail.ejs
+++ b/src/views/product/detail.ejs
@@ -17,7 +17,7 @@
                     <img class="imagenes" src="/images/products/<%= product.image %> ">
                     <p class="descripcion">$ <%= product.price %> </p>
                     <p class="descripcion">Impuestos incluidos</p>
-                    <a href="/user/cart"><button class="cart_button">Agregar al carrito</button></a>
+                    <a class="carro"href="/user/cart"><button class="cart_button">Agregar al carrito</button></a>
                     </div>  
             <p class="description"><%= product.description %> </p>
         
