--- a/src/views/product/product.ejs
+++ b/src/views/product/product.ejs
@@ -20,7 +20,7 @@
                 <h6 class="titulo">
                   <%= element.name %>
                 </h6>
-                <a href="/product/detail/<%= element.id %>">
+                <a class="centrar"href="/product/detail/<%= element.id %>">
                   <div class="imagenes"><img src="/images/products/<%= element.image %>"></div>
                 </a>
                 <p class="descripcion">$<%= element.price %>
@@ -43,7 +43,7 @@
               <h6 class="titulo">
                 <%= element.name %>
               </h6>
-              <a href="/product/detail/<%= element.id %>"><img class="imagenes" src="/images/products/<%= element.image %>"></a>
+              <a class="centrar"href="/product/detail/<%= element.id %>"><img class="imagenes" src="/images/products/<%= element.image %>"></a>
               <p class="descripcion">$<%= element.price %>
               </p>
               <p class="descripcion">Impuestos incluidos</p>
